# legit

./: .editorconfig  .gitignore  .lintstagedrc  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CHANGELOG.md  CONTEXT.md  Cargo.toml  README.md  bunfig.toml  lint-staged.config.js  package.json  skills-lock.json  tsconfig.json
.hooks/: pre-commit  pre-push
.husky/: pre-commit
docs/: opentui-solid2-fork-plan.md
docs/adr/: 0001-rebuild-tui-in-rust-ratatui.md  (+4 more)
legit-rs/: Cargo.toml
legit-rs/src/: auth.rs  blocker.rs  config.rs  file_category.rs  format.rs  git_remote.rs  main.rs  markdown.rs  runtime.rs  secret.rs  test_fixtures.rs  tracing_setup.rs  view.rs  worktree.rs  wrap.rs
legit-rs/src/app/: browser.rs  cmd.rs  detail_items.rs  detail_layout.rs  grouping.rs  list_layout.rs  mod.rs  model.rs  msg.rs  pr_list.rs  refresh_queue.rs  update.rs
legit-rs/src/app/detail_items/: tests.rs
legit-rs/src/app/grouping/: tests.rs
legit-rs/src/app/update/: refresh.rs  tests.rs
legit-rs/src/app/update/tests/: detail.rs  enrichment.rs  files.rs  filter.rs  mod.rs  multi_repo.rs  refresh.rs  worktree.rs
legit-rs/src/blocker/: tests.rs
legit-rs/src/file_category/: tests.rs
legit-rs/src/github/: graphql.rs  limiter.rs  mod.rs  rest.rs  types.rs
legit-rs/src/markdown/: details_html.rs  tests.rs
legit-rs/src/view/: detail.rs  list.rs  summary.rs
legit-rs/src/view/detail/: tests.rs
legit-rs/src/view/list/: tests.rs
legit-rs/src/view/summary/: tests.rs
legit-rs/src/wrap/: tests.rs
patches/: @opentui%2Fsolid@0.1.88.patch
references/: generate-pr-tracker.ts
src/: App.tsx  app-context.ts  auth.rs  chip.rs  cli.ts  clipboard.rs  color.rs  config.rs  env.d.ts  format.rs  git_remote.rs  index.ts  main.rs  markdown.rs  palette.rs  runtime.rs  subprocess.rs  test_fixtures.rs  tracing_setup.rs  view.rs  worktree.rs
src/app/: cmd.rs  (+6 more)
tests/: app-context.test.tsx  auth.test.ts  blocker-engine.test.ts  browser-actions.test.ts  cli.test.ts  coalescer.test.ts  concurrency.test.ts  config.test.ts  detail-state.test.ts  detect-repo.test.ts  file-categorizer.test.ts  format.test.ts  github-client.test.ts  github-transport.test.ts  group-filter-engine.test.ts  helpers.ts  legit-summary.test.ts  legit.test.ts  list-selection.test.ts  list-view-single-source-of-truth.test.tsx  markdown.test.tsx  mergeable-refresh-consistency.test.tsx  pr-store.test.ts  refresh-queue-primitive.test.ts  refresh-queue.test.tsx  tui-app-integration.test.tsx  tui-app.test.tsx  tui-detail-layout.test.tsx  tui-detail-view.test.tsx  tui-list-view.test.tsx  tui-pr-list.test.tsx  tui-summary-panel.test.tsx  ui-state.test.ts  worktree.test.ts
(+73 files in other folders)
