[package]
name = "legit-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures = "0.3"
octocrab = "0.51"
# crossterm is not a direct dependency: we use `ratatui::crossterm` so the
# whole app shares the exact crossterm version ratatui renders through (one
# crossterm, no version split between our setup/event code and the backend).
ratatui = "0.30"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
