[package]
name = "legit-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
pulldown-cmark = { version = "0.13", default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
futures = "0.3"
globset = { version = "0.4.18", default-features = false }
octocrab = "0.51"
# crossterm is not a direct dependency: we use `ratatui::crossterm` so the
# whole app shares the exact crossterm version ratatui renders through (one
# crossterm, no version split between our setup/event code and the backend).
ratatui = "0.30"
# Display-width measurement for the layout-time word wrap (src/wrap.rs); the
# same crate ratatui already measures spans with, so widths can't disagree.
unicode-width = "0.2"
# Hand-written GraphQL transport posts through reqwest (octocrab handles REST).
# rustls-tls reuses the rustls stack octocrab already pulls in (no openssl).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
